/*
 * $Id: ChangeLog,v 1.2257 2004/02/10 06:43:17 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-02-10 20:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/hbrandom.c
  * source/rtl/gtgraph.c
  * source/vm/hash.c
  * source/vm/hvm.c
    ! corrections when LONGLONG feature is disabled.

  * contrib/libct/pack.c
    ! castings

2004-02-09 22:43 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Minor fix in truncmp()
    * Reveresed logic in truncmp() (and callers) to return TRUE on success and FALSE on failure.
    * Renamed truncmp() to MatchToken()

2004-02-10 03:03 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libct/pack.c
    ! fixed casting for OpenWatcom compilation

  * xharbour/source/rtl/val.c
    ! fixed small incompatibilities with Clipper

2004-02-09 16:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/itemapi.c
    ! Fixed MSVC support in hb_itemStrBuf(). MSVC snprintf() returns -1 for overflow
      instead of needed size.

2004-02-09 22:27 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/itemapi.c
   * removed redundant code for infinit check. For all C compilers
     we are using which support finite() or isinf()/isnan() we should
     define proper HB_FINITE_DBL macro - it will be faster and will
     recognize other "bad" double values. Now MSVC is not supported
     and use old code

2004-02-09 16:12 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rtl/readline.c
     ! HB_FREADLINE() now returns -1 if EOF is found
     ! fixed hb_fsReadLine() buffer overrun
     ! hb_fsReadLine() now returns a bEOF param

2004-02-09 10:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/itemapi.c
    * Corrected snprintf() support for MSVC

2004-02-09 18:52 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>